# agenteng

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
agentic-engineering/lessons/00-what-is-agentic-engineering/: README.md
agentic-engineering/lessons/01-what-is-an-agent/: README.md
agents/: README.md  pyproject.toml
agents/basic-agent/: README.md  main.py
agents/coding-agent/: README.md  main.py
agents/memory-agent/: README.md  main.py
agents/optimized-agent/: README.md  main.py
agents/production-agent/: README.md
agents/safe-agent/: README.md  main.py
agents/traced-agent/: README.md
evals/: README.md  diff.py  run.py
evals/cases/: find-imports.yaml  handle-missing-file.yaml  read-version.yaml
examples/: Dockerfile.sandbox  README.md  agent.py  llm_call.py  llm_call_async.py  llm_call_sync.py  production_agent.py  pyproject.toml  safe_agent.py  sandbox_agent.py  stateful_chatbot.py  stateless_chatbot.py  traced_agent.py
modules/01-what-is-an-agent/: README.md
modules/02-an-llm-call/: README.md
modules/03-add-a-loop/: README.md
modules/04-add-memory/: README.md
modules/04-add-tools/: README.md
modules/05-add-memory/: README.md
modules/05-add-tools/: README.md
modules/06-add-sandboxing/: README.md
modules/07-add-evaluation/: README.md
modules/07-add-guardrails/: README.md
modules/08-add-guardrails/: README.md
modules/08-add-observability/: README.md
modules/09-add-evaluation/: README.md
modules/09-add-observability/: README.md
modules/10-add-performance/: README.md
part-1-agent/: README.md  pyproject.toml
(+37 files in other folders)
