[project]
name = "agents"
version = "0.1.0"
description = "Reference agents built across the agenteng content. Shares one venv, one .env, and one dependency set."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0",
]
